Fixes invisible logo on Firefox 3.
 * Tested with IE 6/7/8, Firefox 3/4, Chrome, Opera and Safari
 * Left original logo image in-tact in case we want to use it
   for something else later.

--- a/assets/stylesheets/overrides.style.css
+++ b/assets/stylesheets/overrides.style.css
@@ -45,7 +45,7 @@ dd img {
 }
 
 #header h1 {
-  background-image: url(../images/logo.png);
+  background-image: url(../images/logo_small.png);
   background-size: auto 120px;
   background-position: -25px -25px;
   overflow: visible
